syntax = "proto3";

option csharp_namespace = "InventoryService";
option go_package = "inventory";

package inventoryservice;

service InventoryService {
  rpc CheckStock (CheckStockRequest) returns (CheckStockResponse);
  rpc ReserveItems (ReserveItemsRequest) returns (ReserveItemsResponse);
  rpc ReleaseItems (ReleaseItemsRequest) returns (ReleaseItemsResponse);
}

message CheckStockRequest {
  repeated StockItem items = 1;
}

message StockItem {
  string product_id = 1;
  int32 quantity = 2;
}

message CheckStockResponse {
  bool success = 1;
  repeated StockStatus items = 2;
  string message = 3;
}

message StockStatus {
  string product_id = 1;
  bool available = 2;
  int32 available_quantity = 3;
}

message ReserveItemsRequest {
  string order_id = 1;
  repeated StockItem items = 2;
}

message ReserveItemsResponse {
  bool success = 1;
  string message = 2;
}

message ReleaseItemsRequest {
  string order_id = 1;
  repeated StockItem items = 2;
}

message ReleaseItemsResponse {
  bool success = 1;
  string message = 2;
} 